--- a/references.bib
+++ b/references.bib
@@ -831,6 +831,24 @@
   publisher={ACS Publications}
 }
 
+@article{apaydin2022evaluation,
+  title={Evaluation of air temperature with machine learning regression methods using Seoul City meteorological data},
+  author={APAYDIN, Merve and Yumu{\c{s}}, Mehmethan and De{\u{g}}irmenci, Ali and Karal, {\"O}mer},
+  journal={Pamukkale {\"U}niversitesi M{\"u}hendislik Bilimleri Dergisi},
+  volume={28},
+  number={5},
+  pages={737--747},
+  year={2022},
+  publisher={Pamukkale University}
+}
+
+@article{wmo2018guide,
+  title={Guide to instruments and methods of observation},
+  author={WMO, WMO},
+  journal={World Meteorological Organization WMO, URL https://library. wmo. int/index. php},
+  year={2018}
+}
+
 % Datasets
 @article{didan2021modis,
   title={MODIS/Terra vegetation indices 16-day L3 global 1 km SIN grid V061 [data set]},
